Ajout custom filter pour gérer la recherche par tag + ajout bord sur le menu actif

--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
                             </li>
                             <li class="dropdown filter">
                                 <a href="" ng-click="toggleHideDown()">
-                                    <i class="fa {{ hideDownLinks ? 'fa-check-square-o' : 'fa-square-o'}}  fa "></i>
+                                    <i class="fa {{ hideDownLinks ? 'fa-check-square-o' : 'fa-square-o'}}  fa-fw "></i>
                                     <span class="checkbox-hide-link">Hide down links</span>
                                 </a>
                             </li>
