Ajout du filtre par tag (avec un OR entre les tags)

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="bower_components/semantic-ui-flag/flag.css" />
         <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.css" />
         <link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css" />
+        <link rel="stylesheet" href="bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.css" />
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
@@ -108,6 +109,9 @@
                                     <span class="checkbox-hide-link">Hide down links</span>
                                 </a>
                             </li>
+                            <li class="dropdown filter">
+                                <input type="text" value="" data-role="tagsinput">
+                            </li>
                         </ul>
                     </li>
                     <!-- End filters menu-->
@@ -184,6 +188,7 @@
         <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
         <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
         <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
+        <script src="bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
