Click sur un tag dans les panels views l'ajoute/le retire de l'input filtre tag

--- a/app/index.html
+++ b/app/index.html
@@ -110,7 +110,7 @@
                                 </a>
                             </li>
                             <li class="dropdown filter">
-                                <input type="text" value="" data-role="tagsinput">
+                                <input type="text" value="" data-role="tagsinput" placeholder="Search by tag" class="tag-search-input">
                             </li>
                         </ul>
                     </li>
