--- a/app/index.html
+++ b/app/index.html
@@ -1,73 +1,87 @@
 <!doctype html>
 <html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <!-- build:css(.) styles/vendor.css -->
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <!-- bower:css -->
-        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="bower_components/semantic-ui-flag/flag.css" />
-        <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.css" />
-        <link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css" />
-        <link rel="stylesheet" href="bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.css" />
-        <!-- endbower -->
-        <!-- endbuild -->
-        <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
-        <link rel="stylesheet" href="styles/styles.css">
-        <link rel="stylesheet" href="styles/simple-sidebar.css" />
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-        <!-- endbuild -->
-    </head>
-    <body class="" ng-app="yoslApp" ng-controller="menuCtrl">
-        <div class="" id="wrapper" >
-            <!-- Sidebar -->
-            <div id="sidebar-wrapper">
-                <ul class="sidebar-nav">
-                    <li class="sidebar-brand ">
-                        <img src='assets/ayb-blue-220.png' id="img"/>
-                        <div class="hb">Hacker Base</div>
-                        <div class="hb-small">HB</div>
-                    </li>
-                    <li id="one">
-                        <a ui-sref="home" ng-class="{ active: isActive('/home')}"><i class="fa fa-leanpub fa-lg fa-fw"></i><span class="menutxt">Boards</span></a>
-                    </li>
-                    <li id="two">
-                        <a ui-sref="blogs" ng-class="{ active: isActive('/blogs')}"><i class="fa fa-keyboard-o fa-lg fa-fw"></i><span class="menutxt">Blogs</span></a>
-                    </li>
-                    <li id="three">
-                        <a ui-sref="websites" ng-class="{ active: isActive('/websites')}"><i class="fa fa-globe fa-lg fa-fw"></i><span class="menutxt">Websites</span></a>
-                    </li>
-                    <li id="four">
-                        <a ui-sref="ircs" ng-class="{ active: isActive('/ircs')}"><i class="fa fa-wechat fa-lg fa-fw"></i><span class="menutxt">IRCs</span></a>
-                    </li>
-                    <li id="five">
-                        <a ui-sref="challenges" ng-class="{ active: isActive('/challenges')}"><i class="fa fa-trophy fa-lg fa-fw"></i><span class="menutxt">Challenges</span></a>
-                    </li>
-                    <li id="six">
-                        <a ui-sref="addlink" ng-class="{active: isActive('/addlink')}"> <i class="fa fa-plus fa-lg fa-fw"></i><span class="menutxt">Add Links</span></a>
-                    </li>
-                    <li id="seven">
-                        <a ui-sref="about" ng-class="{active: isActive('/about')}"> <i class="fa fa-question fa-lg fa-fw"></i><span class="menutxt">About</span></a>
-                    </li>
 
+<head>
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- build:css(.) styles/vendor.css -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/semantic-ui-flag/flag.css" />
+    <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.css" />
+    <link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css" />
+    <link rel="stylesheet" href="bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.css" />
+    <!-- endbower -->
+    <!-- endbuild -->
+    <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/simple-sidebar.css" />
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <!-- endbuild -->
+</head>
 
-
+<body class="" ng-app="yoslApp" ng-controller="menuCtrl">
+    <div class="" id="wrapper">
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand ">
+                    <img src='assets/ayb-blue-220.png' id="img" />
+                    <div class="hb">Hacker Base</div>
+                    <div class="hb-small">HB</div>
+                </li>
+                <li id="one">
+                    <a ui-sref="home" ng-class="{ active: isActive('/home')}"><i class="fa fa-leanpub fa-lg fa-fw"></i><span class="menutxt">Boards</span></a>
+                </li>
+                <li id="two">
+                    <a ui-sref="blogs" ng-class="{ active: isActive('/blogs')}"><i class="fa fa-keyboard-o fa-lg fa-fw"></i><span class="menutxt">Blogs</span></a>
+                </li>
+                <li id="three">
+                    <a ui-sref="websites" ng-class="{ active: isActive('/websites')}"><i class="fa fa-globe fa-lg fa-fw"></i><span class="menutxt">Websites</span></a>
+                </li>
+                <li id="four">
+                    <a ui-sref="irc" ng-class="{ active: isActive('/ircs')}"><i class="fa fa-wechat fa-lg fa-fw"></i><span class="menutxt">IRCs</span></a>
+                </li>
+                <li id="five">
+                    <a ui-sref="challenges" ng-class="{ active: isActive('/challenges')}"><i class="fa fa-trophy fa-lg fa-fw"></i><span class="menutxt">Challenges</span></a>
+                </li>
+                <li id="six">
+                    <a ui-sref="addlink" ng-class="{active: isActive('/addlink')}"> <i class="fa fa-plus fa-lg fa-fw"></i><span class="menutxt">Add Base</span></a>
+                </li>
+                <li id="seven">
+                    <a ui-sref="about" ng-class="{active: isActive('/about')}"> <i class="fa fa-question fa-lg fa-fw"></i><span class="menutxt">About</span></a>
+                </li>
+                <li id="eight">
+                    <a ui-sref="about" ng-class="{active: isActive('/about')}"> <i class="icon-large icon-temple-christianity-church"></i><span class="menutxxt">Graveyard</span></a>
+                </li>
+                <li class="dropdown" id="menuLogin">
+                    <li>
+                        <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin">Login</a>
+                        <div class="dropdown-menu" style="padding:17px;">
+                            <form class="form" id="formLogin">
+                                <input name="username" id="username" type="text" placeholder="Username">
+                                <input name="password" id="password" type="password" placeholder="Password">
+                                <br>
+                                <button type="button" id="btnLogin" class="btn">Login</button>
+                            </form>
+                        </div>
+                    </li>
                     <!-- Filters menu -->
                     <li id="eight" data-target="#filters" data-toggle="collapse" class="collapsed">
                         <a href="">
-                            <i class="fa fa-search fa-lg fa-fw"></i><span class="menutxt">Filters </span><span class="caret"></span>
+                            <i id="search" class="fa fa-search fa-lg fa-fw"></i><span class="menutxt">Filters </span><span class="caret"></span>
                         </a>
                     </li>
                     <li id="filters" class="sub-menu collapse" role="menu">
                         <ul class="filter-block">
                             <li class="dropdown filter">
                                 <a>
-                                    <i class="fa fa-flag fa fa-fw"<></i>
+                                    <i class="fa fa-flag fa fa-fw" <></i>
                                     <select id="lang" ng-model="lang" ng-change="changeLang()" data-toggle="select" class="form-control select select-default filter-select">
                                         <option value="">
                                             All languages
@@ -115,90 +129,93 @@
                         </ul>
                     </li>
                     <!-- End filters menu-->
-
-
-
-
                     <br>
                     <li class="" id="menu-toggle">
-                        <a href="" id="fl"><i class="fa fa-chevron-left fa-lg fa-fw fa-lg" id="fleche"  ></i><span class="menutxt">Hide menu</span></a>
+                        <a href="" id="fl"><i class="fa fa-chevron-left fa-lg fa-fw fa-lg" id="fleche"  ></i> </a>
                     </li>
-                </ul>
-            </div>
-            <!-- /#sidebar-wrapper -->
-            <!-- Page Content -->
-            <div class="ui-view" id="page-content-wrapper">
-            </div>
-            <!-- /#page-content-wrapper -->
+            </ul>
         </div>
-        <!-- /#wrapper -->
-        <script>
-        var toggleMenu = function(){
+        <!-- /#sidebar-wrapper -->
+        <!-- Page Content -->
+        <div class="ui-view" id="page-content-wrapper">
+        </div>
+        <!-- /#page-content-wrapper -->
+    </div>
+    <!-- /#wrapper -->
+    <script>
+    var toggleMenu = function() {
         $("#wrapper").toggleClass("toggled");
         /* $("#wrapper").toggleClass("img");*/
         $('#fleche').toggleClass("fa-chevron-right");
         $('#fleche').toggleClass("fa-chevron-left");
+
         /*$('#fl').toggleClass("fleched",false); //faire un if ou
         $('#fl').toggleClass("fleche",true);*/
         if ($('#filters').hasClass("in")) {
-        $('#filters').collapse("hide");
+            $('#filters').collapse("hide");
         }
-        };
-        $("#eight").click(function(e) {
+    };
+    $("#eight").click(function(e) {
         e.preventDefault();
-        if ($("#wrapper").hasClass("toggled")){
-        toggleMenu();
+        if ($("#wrapper").hasClass("toggled")) {
+            toggleMenu();
         }
-        });
-        $("#menu-toggle").click(function(e) {
+    });
+    //faut detect si le menu est pas dja extend et alors faut pas togglemenu
+    $("#search").click(function(e) {
         e.preventDefault();
         toggleMenu();
-        });
-        </script>
-        <script>
-        (function(i, s, o, g, r, a, m) {
+    })
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        toggleMenu();
+    });
+    </script>
+    <script>
+    (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
-        (i[r].q = i[r].q || []).push(arguments)
+            (i[r].q = i[r].q || []).push(arguments)
         }, i[r].l = 1 * new Date();
         a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
+            m = s.getElementsByTagName(o)[0];
         a.async = 1;
         a.src = g;
         m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-XXXXX-X');
-        ga('send', 'pageview');
-        </script>
-        <!--[if lt IE 9]>
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-XXXXX-X');
+    ga('send', 'pageview');
+    </script>
+    <!--[if lt IE 9]>
         <script src="bower_components/es5-shim/es5-shim.js"></script>
         <script src="bower_components/json3/lib/json3.min.js"></script>
         <![endif]-->
-        <!-- build:js(.) scripts/vendor.js -->
-        <!-- bower:js -->
-        <script src="bower_components/angular/angular.js"></script>
-        <script src="bower_components/json3/lib/json3.js"></script>
-        <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="bower_components/angular-resource/angular-resource.js"></script>
-        <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-        <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-        <script src="bower_components/angular-animate/angular-animate.js"></script>
-        <script src="bower_components/angular-touch/angular-touch.js"></script>
-        <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-        <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
-        <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
-        <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
-        <script src="bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.js"></script>
-        <!-- endbower -->
-        <!-- endbuild -->
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/menu.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/addlink.js"></script>
-        <script src="scripts/controllers/home.js"></script>
-        <script src="scripts/controllers/filters.js"></script>
-        <!-- endbuild -->
-    </body>
+    <!-- build:js(.) scripts/vendor.js -->
+    <!-- bower:js -->
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/json3/lib/json3.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
+    <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
+    <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
+    <script src="bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.js"></script>
+    <!-- endbower -->
+    <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/menu.js"></script>
+    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/controllers/addlink.js"></script>
+    <script src="scripts/controllers/home.js"></script>
+    <script src="scripts/controllers/filters.js"></script>
+    <!-- endbuild -->
+</body>
+
 </html>
