--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,10 @@
                     <div class="hb-small">HB</div>
                 </li>
                 <li id="one">
-                    <a ui-sref="home" ng-class="{ active: isActive('/home')}"><i class="fa fa-leanpub fa-lg fa-fw"></i><span class="menutxt">Boards</span></a>
+
+                    <a ui-sref="home" sng-class="{ active: isActive('/home')}"><i class="fa fa-leanpub fa-lg fa-fw"></i><span class="menutxt">Boards </span></a>
+
+
                 </li>
                 <li id="two">
                     <a ui-sref="blogs" ng-class="{ active: isActive('/blogs')}"><i class="fa fa-keyboard-o fa-lg fa-fw"></i><span class="menutxt">Blogs</span></a>
