--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
                     <a ui-sref="about" ng-class="{active: isActive('/about')}"> <i class="fa fa-question fa-lg fa-fw"></i><span class="menutxt">About</span></a>
                 </li>
                 <li id="eight">
-                    <a ui-sref="about" ng-class="{active: isActive('/about')}"> <i class="icon-large icon-temple-christianity-church"></i><span class="menutxxt">Graveyard</span></a>
+                    <a ui-sref="about" ng-class="{active: isActive('/about')}"> <i class="fa fa-thumbs-o-down fa-lg fa-fw"></i><span class="menutxt">Graveyard</span></a>
                 </li>
                 <li class="dropdown" id="menuLogin">
                     <li>
