--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.css" />
     <link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css" />
     <link rel="stylesheet" href="bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.css" />
+    <link rel="stylesheet" href="bower_components/ng-dialog/css/ngDialog.css" />
+    <link rel="stylesheet" href="bower_components/ng-dialog/css/ngDialog-theme-default.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -59,10 +61,10 @@
                     <a ui-sref="addlink" ng-class="{active: isActive('/addlink')}"> <i class="fa fa-plus fa-lg fa-fw"></i><span class="menutxt">Add Base</span></a>
                 </li>
                 <li id="seven">
-                    <a ui-sref="masonry" ng-class="{active: isActive('/about')}"> <i class="fa fa-question fa-lg fa-fw"></i><span class="menutxt">About</span></a>
+                    <a ui-sref="about" ng-class="{active: isActive('/about')}"> <i class="fa fa-question fa-lg fa-fw"></i><span class="menutxt">About</span></a>
                 </li>
                 <li id="eight">
-                    <a ui-sref="about" ng-class="{active: isActive('/about')}"> <i class="fa fa-thumbs-o-down fa-lg fa-fw"></i><span class="menutxt">Graveyard</span></a>
+                    <a ui-sref="graveyard" ng-class="{active: isActive('/graveyard')}"> <i class="fa fa-thumbs-o-down fa-lg fa-fw"></i><span class="menutxt">Graveyard</span></a>
                 </li>
                 <!-- <li class="dropdown" id="menuLogin">
                     <li>
@@ -198,18 +200,19 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-environment/dist/angular-environment.js"></script>
-
-    <script src="bower_components/get-style-property/get-style-property.js"></script>
-    <script src="bower_components/get-size/get-size.js"></script>
     <script src="bower_components/eventie/eventie.js"></script>
     <script src="bower_components/doc-ready/doc-ready.js"></script>
+        <script src="bower_components/ng-dialog/js/ngDialog.js"></script>
     <script src="bower_components/eventEmitter/EventEmitter.js"></script>
+    <script src="bower_components/get-style-property/get-style-property.js"></script>
+    <script src="bower_components/get-size/get-size.js"></script>
     <script src="bower_components/matches-selector/matches-selector.js"></script>
     <script src="bower_components/fizzy-ui-utils/utils.js"></script>
-
-
-
+    <script src="bower_components/outlayer/item.js"></script>
+    <script src="bower_components/outlayer/outlayer.js"></script>
+    <script src="bower_components/masonry/masonry.js"></script>
+    <script src="bower_components/imagesloaded/imagesloaded.js"></script>
+    <script src="bower_components/angular-masonry/angular-masonry.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/json3/lib/json3.js"></script>
@@ -219,17 +222,10 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
-
-    <!--https://github.com/passy/angular-masonry/issues/131 -->
-    <script src="bower_components/outlayer/item.js"></script>
-    <script src="bower_components/outlayer/outlayer.js"></script>
-    <script src="bower_components/masonry/masonry.js"></script>
-    <script src="bower_components/imagesloaded/imagesloaded.js"></script>
-    <script src="bower_components/angular-masonry/angular-masonry.js"></script>
-
     <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
     <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
     <script src="bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.js"></script>
+    <script src="bower_components/angular-environment/dist/angular-environment.js"></script>
     <script src="bower_components/isotope/js/item.js"></script>
     <script src="bower_components/isotope/js/layout-mode.js"></script>
     <script src="bower_components/isotope/js/isotope.js"></script>
@@ -237,6 +233,7 @@
     <script src="bower_components/isotope/js/layout-modes/fit-rows.js"></script>
     <script src="bower_components/isotope/js/layout-modes/masonry.js"></script>
     <script src="bower_components/angular-isotope/dist/angular-isotope.js"></script>
+
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -249,6 +246,7 @@
     <script src="scripts/controllers/home.js"></script>
     <script src="scripts/controllers/filters.js"></script>
     <script src="scripts/controllers/mason.js"></script>
+    <script src="scripts/controllers/blogs.js"></script>
     <!-- endbuild -->
 </body>
 
