--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/jquery-bridget/jquery.bridget.js"></script>
+
 
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -36,8 +35,8 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand ">
                     <img src='assets/ayb-blue-220.png' id="img" />
-                    <div class="hb">Hacker Base</div>
-                    <div class="hb-small">HB</div>
+                    <div class="hb">Security Base</div>
+                    <div class="hb-small">SB</div>
                 </li>
                 <li id="one">
 
@@ -199,10 +198,11 @@
         <![endif]-->
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/jquery-bridget/jquery.bridget.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/eventie/eventie.js"></script>
     <script src="bower_components/doc-ready/doc-ready.js"></script>
-        <script src="bower_components/ng-dialog/js/ngDialog.js"></script>
     <script src="bower_components/eventEmitter/EventEmitter.js"></script>
     <script src="bower_components/get-style-property/get-style-property.js"></script>
     <script src="bower_components/get-size/get-size.js"></script>
@@ -226,14 +226,7 @@
     <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
     <script src="bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.js"></script>
     <script src="bower_components/angular-environment/dist/angular-environment.js"></script>
-    <script src="bower_components/isotope/js/item.js"></script>
-    <script src="bower_components/isotope/js/layout-mode.js"></script>
-    <script src="bower_components/isotope/js/isotope.js"></script>
-    <script src="bower_components/isotope/js/layout-modes/vertical.js"></script>
-    <script src="bower_components/isotope/js/layout-modes/fit-rows.js"></script>
-    <script src="bower_components/isotope/js/layout-modes/masonry.js"></script>
-    <script src="bower_components/angular-isotope/dist/angular-isotope.js"></script>
-
+    <script src="bower_components/ng-dialog/js/ngDialog.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -245,7 +238,6 @@
     <script src="scripts/controllers/challenges.js"></script>
     <script src="scripts/controllers/home.js"></script>
     <script src="scripts/controllers/filters.js"></script>
-    <script src="scripts/controllers/mason.js"></script>
     <script src="scripts/controllers/blogs.js"></script>
     <!-- endbuild -->
 </body>
