--- a/app/index.html
+++ b/app/index.html
@@ -127,7 +127,7 @@
                             <li class="dropdown filter">
                                 <a href="" ng-click="toggleHideDown()">
                                     <i class="fa {{ hideDownLinks ? 'fa-check-square-o' : 'fa-square-o'}}  fa-fw "></i>
-                                    <span class="checkbox-hide-link">Hide down links</span>
+                                    <span class="checkbox-hide-link">Hide inactive links</span>
                                 </a>
                             </li>
                             <li class="dropdown filter">
@@ -199,7 +199,6 @@
         <![endif]-->
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/eventie/eventie.js"></script>
     <script src="bower_components/doc-ready/doc-ready.js"></script>
@@ -238,7 +237,6 @@
     <script src="scripts/controllers/challenges.js"></script>
     <script src="scripts/controllers/home.js"></script>
     <script src="scripts/controllers/filters.js"></script>
-    <script src="scripts/controllers/blogs.js"></script>
     <!-- endbuild -->
 </body>
 
