--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
                     <a ui-sref="blogs" ng-class="{ active: isActive('/blogs')}"><i class="fa fa-keyboard-o fa-lg fa-fw"></i><span class="menutxt">Blogs</span></a>
                 </li>
                 <li id="three">
-                    <a ui-sref="websites" ng-class="{ active: isActive('/websites')}"><i class="fa fa-globe fa-lg fa-fw"></i><span class="menutxt">Websites</span></a>
+                    <a ui-sref="tools" ng-class="{ active: isActive('/tools')}"><i class="fa fa-globe fa-lg fa-fw"></i><span class="menutxt">Tools</span></a>
                 </li>
                 <li id="four">
                     <a ui-sref="irc" ng-class="{active: isActive('/irc')}"><i class="fa fa-wechat fa-lg fa-fw"></i><span class="menutxt">IRCs</span></a>
