--- a/app/index.html
+++ b/app/index.html
@@ -134,7 +134,7 @@
                                 </a>
                             </li>
                             <li class="dropdown filter">
-                                <input type="text" value="" data-role="tagsinput" placeholder="Search by tag" class="tag-search-input">
+                                <input type="text" value="" data-role="tagsinput" placeholder="Search by tag" class="filter-tags tag-search-input">
                             </li>
                         </ul>
                     </li>
