quick about page

--- a/app/index.html
+++ b/app/index.html
@@ -133,8 +133,8 @@
                                     <span class="checkbox-hide-link">Hide inactive links</span>
                                 </a>
                             </li>
-                            <li class="dropdown filter">
-                                <input type="text" value="" data-role="tagsinput" placeholder="Search by tag" class="filter-tags tag-search-input">
+                            <li class="dropdown filter" style="width:60%">
+                                <input type="text" value="" data-role="tagsinput" placeholder="Search by tag" class="filter-tags tag-search-input" >
                             </li>
                         </ul>
                     </li>
